MISC crewlist#62 - Fix autocomplete options css problem
The highlight span messed up the style of options of autocomplete

--- a/app/assets/stylesheets/editor.scss
+++ b/app/assets/stylesheets/editor.scss
@@ -29,6 +29,11 @@
     margin-left: -2px;
     width: 102%;
   }
+  // span for highlight in autocomplete options
+  .autocomplete-content li span.highlight {
+    display: initial;
+  }
+
   // select
   .chzn-container {
     &.chzn-container-multi {
